--- a/_posts/2018-02-05-ireland-1.md
+++ b/_posts/2018-02-05-ireland-1.md
@@ -3,7 +3,7 @@ layout: post
 title: Sampling Ireland - Part 1
 date: 2018-02-05
 category: daily
-tags: [Ireland, Bushmills, TullamoreDEW, Jameson, Readbreast_12]
+tags: [Ireland, Bushmills, TullamoreDEW, Jameson, Redbreast_12]
 ---
 
 Travel affords one ample opportunity to pick up 50 mL sample bottles. I picked up numerous samples representing all varieties of whiskies. I figured this was a good way to get a good idea of different styles. Today kicks off the sampling series by putting the 'e' in whiskey with a trip to Ireland.
