--- a/_posts/2018-02-08-ireland-2.md
+++ b/_posts/2018-02-08-ireland-2.md
@@ -3,7 +3,7 @@ layout: post
 title: Sampling Ireland - Part 2
 date: 2018-02-08
 category: daily
-tags: [Ireland, Readbreast_12, Scotland, Islay, Lagavulin_Distillers2017]
+tags: [Ireland, Redbreast_12, Scotland, Islay, Lagavulin_Distillers2017]
 ---
 
 Turns out I was even too tired yesterday to even bring in my suitcase containing my new whiskies. I brought the suitcase inside tonight and the bottles were quite cold. But hey, let's turn this into an experiment. Trying the Redbreast 12 and Lagavulin Distiller's Edition.
