--- a/_posts/2018-02-04-smoke-8.md
+++ b/_posts/2018-02-04-smoke-8.md
@@ -3,12 +3,12 @@ layout: post
 title: Smoke Week - Part 8
 date: 2018-02-04
 category: daily
-tags: [Scotland, Islay, Lagavulin_16, Lagavulin_Distillers17]
+tags: [Scotland, Islay, Lagavulin_16, Lagavulin_Distillers2017]
 ---
 
 Smoke is powerful. So powerful that this week goes to 8.
 
-I'm still on travel and enjoyed visiting some new liquor stores. I wanted to find an expression like the Ardbeg Uigeadail but more complex. I was ultimately steered towards the Lagavulin Distiller's Edition (2017 bottling) and picked up a bottle on sale for $99. 
+I'm still on travel and enjoyed visiting some new liquor stores. I wanted to find an expression like the Ardbeg Uigeadail but more complex. I was ultimately steered towards the Lagavulin Distiller's Edition (2017 bottling) and picked up a bottle on sale for $99.
 
 It pours a bit darker than the standard 16. On the nose, I immediately get red wine. This is the winiest whisky I've yet encountered. There's smoke but it's a bit more reserved on the back end.
 
