--- a/_posts/2018-01-28-smoke-1.md
+++ b/_posts/2018-01-28-smoke-1.md
@@ -3,7 +3,7 @@ layout: post
 title: Smoke Week - Part 1
 date: 2018-01-28
 category: daily
-tags: [Scotland, Islay, Lagavulin_16, Laphroaig_10, Ardbeg_Uigeadail]
+tags: [Scotland, Scotland_Islay, Lagavulin_16, Laphroaig_10, Ardbeg_Uigeadail]
 ---
 
 ![Hold on to your butts](https://media.giphy.com/media/OCu7zWojqFA1W/giphy.gif)
