--- a/_posts/2018-02-12-speyside-01.md
+++ b/_posts/2018-02-12-speyside-01.md
@@ -3,7 +3,7 @@ layout: post
 title: You Spey, I Spey - Part 1
 date: 2018-02-12
 category: daily
-tags: [Scotland, Speyside, Aberlour_Abunadh]
+tags: [Scotland, Scotland_Speyside, Aberlour_Abunadh]
 ---
 
 Speyside has the largest concentration of Scotland's distillers and seems to have just as many styles. I was fortunate enough to grab a good deal on one famous bottle and pickup a handful of Speyside samplers. This should keep me busy for a couple weeks. First up, that famous bottle:
@@ -24,7 +24,7 @@ How is it in reality? I poured a nice 25 mL portion neat into a Glencairn.
 
 Color: The reddest whisky I've yet encountered. Not sure if it's natural
 Nose: Holy cherry and alcohol, Batman! It took a few sniffs to get through the 60% alcohol but then a wonderful dark red stone fruit aroma came to the front. There's a lot more going on here but I can't quite make it out yet.
-Taste: This is thick. I get an explosion of fruit flavors. The high alcohol content numbs as I swish it through my mouth. 
+Taste: This is thick. I get an explosion of fruit flavors. The high alcohol content numbs as I swish it through my mouth.
 Finish: Dry, cherry candy. Hot damn! This tastes just like [Haribo Twin Cherries](https://www.amazon.com/Haribo-Gummi-Candy-Happy-Cherries/dp/B000EVT04M?th=1). There's an intial unpleasant waxiness to the finish that goes away after a couple more sips.
 
 This is one big bold sherry bomb. It's the complete opposite of the smoky, complex Lagavulin. I drink whisky to experience new things like this.
