--- a/_posts/2018-01-21-HP12-1.md
+++ b/_posts/2018-01-21-HP12-1.md
@@ -3,7 +3,7 @@ layout: post
 title: Highland Park 12 - Part 1
 date: 2018-01-21
 category: daily
-tags: [Scotland, Islands, HighlandPark_12]
+tags: [Scotland, Scotland_Island, HighlandPark_12]
 ---
 
 Whisky Bob starting things off here with a week of daily Highland Park 12. Highland Park is the northernmost Scottish Distillery on the Orkney archipelago. Their whiskys are renowned for their complex flavor profiles that touch on all the Scottish regions. They recently rebranded with a bunch of extraneous Viking crap and have a ton of strangely named expensive no age statement releases. I picked up an older non-Viking 750 mL bottle of their standard 12 year release in suburban Boston for $43.
