--- a/_posts/2018-01-31-smoke-4.md
+++ b/_posts/2018-01-31-smoke-4.md
@@ -3,7 +3,7 @@ layout: post
 title: Smoke Week - Part 4
 date: 2018-01-31
 category: daily
-tags: [Scotland, Islay, Laphroaig_10]
+tags: [Scotland, Scotland_Islay, Laphroaig_10]
 ---
 
 Pure Laphroaig 10 today. Neat 15 mL pour in a Glencairn. Peat smoke up front with the sea revealing itself. The body thickens as I chew. Smoke and medicine. Warming. The sea lingers. A good dram to sit with and think with after a long day.
