--- a/_posts/2018-02-04-smoke-8.md
+++ b/_posts/2018-02-04-smoke-8.md
@@ -3,7 +3,7 @@ layout: post
 title: Smoke Week - Part 8
 date: 2018-02-04
 category: daily
-tags: [Scotland, Islay, Lagavulin_16, Lagavulin_Distillers2017]
+tags: [Scotland, Scotland_Islay, Lagavulin_16, Lagavulin_Distillers2017]
 ---
 
 Smoke is powerful. So powerful that this week goes to 8.
