--- a/_posts/2018-02-15-speyside-04.md
+++ b/_posts/2018-02-15-speyside-04.md
@@ -6,5 +6,6 @@ category: daily
 tags: [Scotland_Speyside, Speyside_10]
 ---
 
+Test edit to try out atom's github integration
 
 Whisky Bob signing off.
