--- a/_posts/2018-02-15-speyside-04.md
+++ b/_posts/2018-02-15-speyside-04.md
@@ -8,4 +8,6 @@ tags: [Scotland_Speyside, Speyside_10]
 
 Test edit to try out atom's github integration
 
+Trying once again
+
 Whisky Bob signing off.
