Final test of atom's github

--- a/_posts/2018-02-15-speyside-04.md
+++ b/_posts/2018-02-15-speyside-04.md
@@ -3,8 +3,9 @@ layout: post
 title: You Spey, I Spey - Part 4
 date: 2018-02-15
 category: daily
-tags: [Scotland_Speyside, Speyside_10]
+tags: [Scotland_Speyside, Speyburn_10]
 ---
 
+Testing atom's github integration. Placeholder for real content.
 
 Whisky Bob signing off.
