redesign from minima theme

--- a/_posts/2018-01-25-HP12-5.md
+++ b/_posts/2018-01-25-HP12-5.md
@@ -2,8 +2,8 @@
 layout: post
 title: Highland Park 12 - Part 5
 date: 2018-01-25
-category: daily
-tags: [Scotland, Scotland_Island, HighlandPark_12]
+category: blog
+tags: [Scotch, Island, Highland Park 12]
 ---
 
 HP12 neat 25 mL pour into a Glencairn (cost $1.43 prorated from a $43 750 mL bottle). Nose: dull rubbing alcohol revealing a pleasant sweetness and light smokiness. Smells delicious. I have a new appreciation for this whisky after drinking the Lagavulin 16 yesterday. I really need to up my "smoke" vocabulary as these are smokey yet completely different. The HP12 has smoke and a medicinal quality on the backend. More sweetness on the nose. Drying and ashy finish. Really long pleasant finish.
