--- a/_posts/2018-01-28-smoke-1.md
+++ b/_posts/2018-01-28-smoke-1.md
@@ -2,8 +2,8 @@
 layout: post
 title: Smoke Week - Part 1
 date: 2018-01-28
-category: daily
-tags: [Scotland, Scotland_Islay, Lagavulin_16, Laphroaig_10, Ardbeg_Uigeadail]
+category: blog
+tags: [Scotch, Islay, Lagavulin 16, Laphroaig 10, Ardbeg Uigeadail]
 ---
 
 ![Hold on to your butts](https://media.giphy.com/media/OCu7zWojqFA1W/giphy.gif)
