--- a/_posts/2018-01-29-smoke-2.md
+++ b/_posts/2018-01-29-smoke-2.md
@@ -2,8 +2,8 @@
 layout: post
 title: Smoke Week - Part 2
 date: 2018-01-29
-category: daily
-tags: [Scotland, Scotland_Islay, Lagavulin_16]
+category: blog
+tags: [Scotch, Islay, Lagavulin 16]
 ---
 
 Whisky Bob had a long, long day so this will be short. Sampling the Lagavulin 16 I couldn't finish last night and a fresh pour. The pour from last night was left neat in a Glencairn and covered overnight. I get a huge peaty smoke nose upon taking off the cover. The fresh pour has a much higher alcohol burn on the nose.
