--- a/_posts/2018-01-30-smoke-3.md
+++ b/_posts/2018-01-30-smoke-3.md
@@ -2,8 +2,8 @@
 layout: post
 title: Smoke Week - Part 3
 date: 2018-01-30
-category: daily
-tags: [Scotland, Scotland_Islay, Lagavulin_16, Laphroaig_10]
+category: blog
+tags: [Scotch, Islay, Lagavulin 16, Laphroaig 10]
 ---
 
 I'll taste Laphroaig 10 and Lagavulin 16 today alongside the distillers' notes. I'm curious to see if the notes have any impact on my enjoyment of these two drams and if they help me learn some new vocabulary. I come into this tasting with a noticable preference for the complexity of the Lagavulin 16. My wallet really wants me to develop more of a taste for the Laphroaig 10.
