--- a/_posts/2018-02-02-smoke-6.md
+++ b/_posts/2018-02-02-smoke-6.md
@@ -2,8 +2,8 @@
 layout: post
 title: Smoke Week - Part 6
 date: 2018-02-02
-category: daily
-tags: [Scotland, Scotland_Blend, JohnnieWalker_Black]
+category: blog
+tags: [Scotch, Scotch Blend, Johnnie Walker Black]
 ---
 
 Whisky Bob flew cross country today and took the opportunity to revisit an old "smoky" friend in the form of Johnnie Walker Black. JW Black was my go to "fancy" drink in college and I remember it having a bit of a kick. I liked to drink it on the rocks and with Dr. Pepper. Johnnie seems to be looked down upon in some whisky circles - not sure if it's because of its popularity or aggressive marketing. That viewpoint has tainted my own and I'm coming into this not expecting much.
