--- a/_posts/2018-02-04-smoke-8.md
+++ b/_posts/2018-02-04-smoke-8.md
@@ -2,8 +2,8 @@
 layout: post
 title: Smoke Week - Part 8
 date: 2018-02-04
-category: daily
-tags: [Scotland, Scotland_Islay, Lagavulin_16, Lagavulin_Distillers2017]
+category: blog
+tags: [Scotch, Islay, Lagavulin 16, Lagavulin Distillers 2017]
 ---
 
 Smoke is powerful. So powerful that this week goes to 8.
