--- a/_posts/2018-02-09-ireland-3.md
+++ b/_posts/2018-02-09-ireland-3.md
@@ -2,8 +2,8 @@
 layout: post
 title: Sampling Ireland - Part 3
 date: 2018-02-09
-category: daily
-tags: [Ireland, Bushmills, Jameson]
+category: blog
+tags: [Irish, Bushmills Original, Jameson]
 ---
 
 Despite a desire to drink Lagavulin, I'm going to stick it out and continue with my Irish samples. I'm revisiting the 50 mL samples of Bushmills Original and Jameson standard. I prefered the Bushmills on the first sampling - I liked its smoother taste and gingery finish. How do these hold up on second tasting?
@@ -13,8 +13,8 @@ I poured both neat into Glencairns. I finished up the Bushmills and have a bit o
 ### Bushmills Original
 
 * Color: Light apple juice
-* Nose: Light and fruity. A bit of alcohol burn. 
-* Taste: Light and fruity. Thinnish mouth feel. 
+* Nose: Light and fruity. A bit of alcohol burn.
+* Taste: Light and fruity. Thinnish mouth feel.
 * Finish: Medium length citrus and ginger-like spice. Nice fruit notes that stick with you.
 
 ### Jameson
