--- a/_posts/2018-02-10-ireland-4.md
+++ b/_posts/2018-02-10-ireland-4.md
@@ -2,15 +2,15 @@
 layout: post
 title: Sampling Ireland - Part 4
 date: 2018-02-10
-category: daily
-tags: [Ireland, Jameson, Redbreast_12]
+category: blog
+tags: [Irish, Jameson, Redbreast 12]
 ---
 
 I have a number of guiding principles in undertaking this whiskey quest:
 
 1. Gain a deeper appreciation for all styles of whisk(e)y
 2. Write every day
-3. Never use terminology I don't understand 
+3. Never use terminology I don't understand
 4. Learn from others and expand my terminology after my initial impression
 5. Drink every day with rare exception
 6. Stick to 30 - 50 mL intake every day with rare exception
