--- a/_posts/2018-02-11-ireland-5.md
+++ b/_posts/2018-02-11-ireland-5.md
@@ -2,8 +2,8 @@
 layout: post
 title: Sampling Ireland - Part 5
 date: 2018-02-11
-category: daily
-tags: [Ireland, TullamoreDEW, Redbreast_12]
+category: blog
+tags: [Irish, Tullamore DEW, Redbreast 12]
 ---
 
 Time to wrap up this sampling of Ireland.
