--- a/_posts/2018-02-12-speyside-01.md
+++ b/_posts/2018-02-12-speyside-01.md
@@ -2,8 +2,8 @@
 layout: post
 title: You Spey, I Spey - Part 1
 date: 2018-02-12
-category: daily
-tags: [Scotland, Scotland_Speyside, Aberlour_Abunadh]
+category: blog
+tags: [Scotch, Speyside, Aberlour A'bunadh 60]
 ---
 
 Speyside has the largest concentration of Scotland's distillers and seems to have just as many styles. I was fortunate enough to grab a good deal on one famous bottle and pickup a handful of Speyside samplers. This should keep me busy for a couple weeks. First up, that famous bottle:
