--- a/_posts/2018-02-13-speyside-02.md
+++ b/_posts/2018-02-13-speyside-02.md
@@ -2,8 +2,8 @@
 layout: post
 title: You Spey, I Spey - Part 2
 date: 2018-02-13
-category: daily
-tags: [Scotland, Scotland_Speyside, Macallan_Sherry12, Macallan_DoubleCask12]
+category: blog
+tags: [Scotch, Speyside, Macallan 12, Macallan Double Cask 12]
 ---
 
 I lucked into 50 mL samples of *The* Macallan 12 Year Sherry Cask and 12 Year Double Cask. These are classy samplers that come with their own box. That's probably why they cost so much more than the Jack samples I'll get to when I venture stateside.
@@ -36,6 +36,6 @@ My take:
 
 ### Conclusions
 
-The relationship between these two reminds me a lot of the relationship between Bushmills Original and Jameson standard - the bushmills was smoother and the Jameson had a bit more going on. Here, the sherry version is smoother and the Double Caks has a bit more going on. I preferred the Bushmills in the Irish comparison but this one is a bit more of a toss up. The sherry version is simpler but it's really nice. I appreciate how a sip of the Double Cask evolves from vanilla/woody in the mouth to sherry in the finish. I think this choice depends on your mood. 
+The relationship between these two reminds me a lot of the relationship between Bushmills Original and Jameson standard - the bushmills was smoother and the Jameson had a bit more going on. Here, the sherry version is smoother and the Double Caks has a bit more going on. I preferred the Bushmills in the Irish comparison but this one is a bit more of a toss up. The sherry version is simpler but it's really nice. I appreciate how a sip of the Double Cask evolves from vanilla/woody in the mouth to sherry in the finish. I think this choice depends on your mood.
 
 Whisky Bob signing off.
