--- a/_posts/2018-02-14-speyside-03.md
+++ b/_posts/2018-02-14-speyside-03.md
@@ -2,8 +2,8 @@
 layout: post
 title: You Spey, I Spey - Part 3
 date: 2018-02-14
-category: daily
-tags: [Scotland_Speyside, Glenlivet_12, Glenfiddich_12]
+category: blog
+tags: [Scotch, Speyside, Glenlivet 12, Glenfiddich 12]
 ---
 
 Cracking open two more Speyside 50 mL samplers today - Glenlivet 12 and Glenfiddich 12. I get these confused all the time. I poured 15 mLs of each into Glencairns and promptly forgot which was which. This bodes well for the tasting...
