--- a/_posts/2018-02-15-speyside-04.md
+++ b/_posts/2018-02-15-speyside-04.md
@@ -2,11 +2,11 @@
 layout: post
 title: You Spey, I Spey - Part 4
 date: 2018-02-15
-category: daily
-tags: [Scotland_Speyside, Speyburn_10]
+category: blog
+tags: [Scotch, Speyside, Speyburn 10]
 ---
 
-Tearing into my final 50 mL Speyside sampler tonight, Speyburn 10. 
+Tearing into my final 50 mL Speyside sampler tonight, Speyburn 10.
 
 * Nose: More complex than the Glens of yesterday. Alcohol burn right off the bat followed by grass and light fruit notes
 * Taste: Medium body. Lots of alcohol that burns away other flavors. Most of the taste is in the finish.
