--- a/_posts/2018-01-24-HP12-4.md
+++ b/_posts/2018-01-24-HP12-4.md
@@ -2,8 +2,8 @@
 layout: post
 title: Highland Park 12 - Part 4
 date: 2018-01-24
-category: daily
-tags: [Scotland, Scotland_Island, HighlandPark_12, Scotland_Islay, Lagavulin_16]
+category: blog
+tags: [Scotch, Island, Highland Park 12, Islay, Lagavulin 16]
 ---
 
 Pouring Highland Park 12 in a Riedel Vinum whiskey glass today to mix things up. Getting a lot more alcohol burn on the nose and much less sweetness than with the Glencairn glass. The smoke is very forward here. Flavors are about the same with the Vinum as the Glencairn. The Vinum is easier to drink from but I've become so accustomed to the Glencairn after just a couple days that it actually felt a bit strange. Think I prefer the Glencairn overall but will be using both in the coming days and decades.
