--- a/_posts/2018-01-26-HP12-6.md
+++ b/_posts/2018-01-26-HP12-6.md
@@ -2,8 +2,8 @@
 layout: post
 title: Highland Park 12 - Part 6
 date: 2018-01-26
-category: daily
-tags: [Scotland, Scotland_Island, HighlandPark_12]
+category: blog
+tags: [Scotch, Island, Highland Park 12]
 ---
 
 It's the penultimate day of Highland Park 12 week here at Whisky Bob's and I feel like doing something stupid...
