--- a/_posts/2018-02-03-smoke-7.md
+++ b/_posts/2018-02-03-smoke-7.md
@@ -2,8 +2,8 @@
 layout: post
 title: Smoke Week - Part 7
 date: 2018-02-03
-category: daily
-tags: [Scotland, Scotland_Islay, Lagavulin_16, Laphroaig_10]
+category: blog
+tags: [Scotch, Islay, Lagavulin 16, Laphroaig 10]
 ---
 
 I was hoping to try out some new smoky whiskys while on travel. Unfortunately, the work schedule hasn't been amenable to visiting bars. Fortunately, some Lagavulin 16 and Laphroaig 10 made the trip with me in some [little nippers](https://www.amazon.com/gp/product/B00GWRC65W/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1).
