--- a/_posts/2018-02-17-kildalton-1.md
+++ b/_posts/2018-02-17-kildalton-1.md
@@ -2,8 +2,8 @@
 layout: post
 title: Kickin' in Kildalton - Part 1
 date: 2018-02-17
-category: daily
-tags: [Scotland_Islay, Ardbeg_10, Lagavulin_16]
+category: blog
+tags: [Scotch, Islay, Ardbeg 10, Lagavulin 16]
 ---
 
 I spent the day snowtubing with Whiskey Kid #1. We were just a few minutes away from a New Hampshire liquor barn and she graciously agreed to a quick trip. Fortunately for her, I had my shopping list ready and it was a quick trip. I picked up enough to fill out my 8 month plan (with one summer exception) and bring my yearly total up to ~$700. I've got too much whisky stock... better drink some of it!
