--- a/_posts/2018-02-18-kildalton-2.md
+++ b/_posts/2018-02-18-kildalton-2.md
@@ -10,6 +10,10 @@ Let's revisit the Laphroaig 10 alongside the Ardbeg 10. I poured 15 mL neat of e
 
 ### Laphroaig 10
 
+* 43% ABV
+* Paid: $40/750mL
+* $0.80/15mL pour
+* [Official Website](https://www.laphroaig.com/product/laphroaig-10-year-old/)
 * Color: Much darker than the Ardbeg. It's artificial.
 * Nose: Peat smoke, medicinal notes, salty seaside notes.
 * Taste: Hits softer than the Ardbeg. Takes time to develop.
@@ -18,6 +22,10 @@ Let's revisit the Laphroaig 10 alongside the Ardbeg 10. I poured 15 mL neat of e
 
 ### Ardbeg 10
 
+* 46% ABV
+* Paid: Calculated at $39/750mL from a $48 sampler pack with 50mL Corryvrecken and 50mL Uigeadail samples
+* $0.78/15mL pour
+* [Official Website](https://www.ardbeg.com/en-US/whisky/ultimate-range/ten-years-old)
 * Color: Much lighter than the Laphroaig. I assume it's natural.
 * Nose: Peat smoke, some sort of light citrusy sweetness. Less complex than the Laphroaig
 * Taste: Ashy smoke hits right away. Much stronger than the Laphroaig.
