--- a/_posts/2018-02-18-kildalton-2.md
+++ b/_posts/2018-02-18-kildalton-2.md
@@ -35,6 +35,6 @@ Let's revisit the Laphroaig 10 alongside the Ardbeg 10. I poured 15 mL neat of e
 
 The more I drink other Islays, the more I appreciate the subtleties of the Laphroaig. That said, I prefer the favor profile of the Ardbeg. But these are both mighty fine expressions and the "better" one comes down to personal preference.
 
-I'll be back tomorrow to compare the three together.
+I'll be back tomorrow to compare these with the Lagavulin 16.
 
 Whisky Bob signing off.
