sam gif in images folder

--- a/_posts/2018-01-28-smoke-1.md
+++ b/_posts/2018-01-28-smoke-1.md
@@ -6,7 +6,7 @@ category: blog
 tags: [Scotch, Islay, Lagavulin 16, Laphroaig 10, Ardbeg Uigeadail]
 ---
 
-![Hold on to your butts](https://media.giphy.com/media/OCu7zWojqFA1W/giphy.gif)
+![Hold on to your butts]({{site.baseurl}}/images/2018-01-28-sam.gif)
 
 To kick off smoke week, we're sampling from the three southern Islay distilleries today:
 
