update language and add pic

--- a/_posts/2018-02-19-kildalton-3.md
+++ b/_posts/2018-02-19-kildalton-3.md
@@ -6,6 +6,8 @@ category: blog
 tags: [Scotch, Islay, Ardbeg 10, Lagavulin 16, Laphroaig 10, Test]
 ---
 
+![Kildalton Trio Blind Taste Test]({{site.baseurl}}/images/2018-02-19-kildalton-trio.jpg)
+
 I feel like I have a pretty good handle on the Kildalton trio. Let's put that confidence to the test with a series of blind taste tests. Mrs. Whisky will pour 20 mL samples and keep track with a sophisticated color coded system. She'll switch up the colors for each test.
 
 ### Color test, wherein I look at the whisky
@@ -20,14 +22,14 @@ These were incredibly difficult to tell apart. All the peat smoke quickly blende
 
 **0/3**
 
-### Taste test, wherin I drink the whisky
+### Taste test, wherein I drink the whisky
 
 This was easier than smell alone. The ashy, dry, citrusy finish make the Ardbeg stand out. I drank it first and called it out correctly. The next one had a big peat hit a salty, seashore-like finish. Laphroaig. I sipped these too quickly and my tastebuds were shot. I sipped the Lagavulin but honestly couldn't pick it out of the lineup. Thank you, process of elimination.
 
 **3/3**
 
-### Conclusion, wherin I think deep thoughts
+### Conclusion, wherein I think deep thoughts
 
-I was shocked by the similarity in the nose of all three. It was really hard to tell apart! After performing the blind test, I let them sit awhile longer in hopes of the oxidation helping me out. I still had a hard time telling them apart just by nose. It's not surprising that these expressions are more similar than they are different. 
+I was shocked by the similarity in the nose of all three. It was really hard to tell them apart! After performing the blind test, I let them sit awhile longer in hopes of the oxidation helping me out. I still had a hard time telling them apart just by nose but the tasting was easier. I guess it shouldn't be surprising how similar these all are to each other. 
 
 Whisky Bob signing off.
