added excerpt separator

--- a/_posts/2018-02-19-kildalton-3.md
+++ b/_posts/2018-02-19-kildalton-3.md
@@ -4,11 +4,14 @@ title: Kickin' in Kildalton - Part 3
 date: 2018-02-19
 category: blog
 tags: [Scotch, Islay, Ardbeg 10, Lagavulin 16, Laphroaig 10, Test]
+excerpt_separator: <!--more-->
 ---
 
 ![Kildalton Trio Blind Taste Test]({{site.baseurl}}/images/2018-02-19-kildalton-trio.jpg)
 
 I feel like I have a pretty good handle on the Kildalton trio. Let's put that confidence to the test with a series of blind taste tests. Mrs. Whisky will pour 20 mL samples and keep track with a sophisticated color coded system. She'll switch up the colors for each test.
+
+<!--more-->
 
 ### Color test, wherein I look at the whisky
 
@@ -30,6 +33,6 @@ This was easier than smell alone. The ashy, dry, citrusy finish make the Ardbeg 
 
 ### Conclusion, wherein I think deep thoughts
 
-I was shocked by the similarity in the nose of all three. It was really hard to tell them apart! After performing the blind test, I let them sit awhile longer in hopes of the oxidation helping me out. I still had a hard time telling them apart just by nose but the tasting was easier. I guess it shouldn't be surprising how similar these all are to each other. 
+I was shocked by the similarity in the nose of all three. It was really hard to tell them apart! After performing the blind test, I let them sit awhile longer in hopes of the oxidation helping me out. I still had a hard time telling them apart just by nose but the tasting was easier. I guess it shouldn't be surprising how similar these all are to each other.
 
 Whisky Bob signing off.
