--- a/_posts/2018-03-03-grab-bag-7.md
+++ b/_posts/2018-03-03-grab-bag-7.md
@@ -6,6 +6,8 @@ category: blog
 tags: [Scotch, Islay, Bunnahabhain 12]
 ---
 
+![Bunny 12]({{site.baseurl}}/images/2018-03-03-bunnahabhain.jpg)
+
 I picked up this bottle of Bunnahabhain 12 a few weeks back on my trip to New Hampshire. I've been saving it for a big return trip to Islay but it's Grab Bag Week so why not pop it open today.
 
 ### Bunnahabhain 12
