3/5 new post and udpates

--- a/_posts/2018-01-28-smoke-1.md
+++ b/_posts/2018-01-28-smoke-1.md
@@ -4,12 +4,14 @@ title: Smoke Week - Part 1
 date: 2018-01-28
 category: blog
 tags: [Scotch, Islay, Lagavulin 16, Laphroaig 10, Ardbeg Uigeadail]
+excerpt_separator: <!--more-->
 ---
 
 ![Hold on to your butts]({{site.baseurl}}/images/2018-01-28-sam.gif)
 
 To kick off smoke week, we're sampling from the three southern Islay distilleries today:
 
+<!--more-->
 
 | Distillery | Expression | ABV | $/25mL | $/Bottle |
 | :--- | :--- | :--- | :--- | :--- |
