--- a/_posts/2018-03-03-grab-bag-7.md
+++ b/_posts/2018-03-03-grab-bag-7.md
@@ -4,11 +4,14 @@ title: Grab Bag 7 - Bunnahabhain 12
 date: 2018-03-03
 category: blog
 tags: [Scotch, Islay, Bunnahabhain 12]
+excerpt_separator: <!--more-->
 ---
 
 ![Bunny 12]({{site.baseurl}}/images/2018-03-03-bunnahabhain.jpg)
 
 I picked up this bottle of Bunnahabhain 12 a few weeks back on my trip to New Hampshire. I've been saving it for a big return trip to Islay but it's Grab Bag Week so why not pop it open today.
+
+<!--more-->
 
 ### Bunnahabhain 12
 
