--- a/_posts/2018-03-05-kildalton-4.md
+++ b/_posts/2018-03-05-kildalton-4.md
@@ -6,6 +6,14 @@ category: blog
 tags: [Scotch, Islay, Ardbeg 10]
 ---
 
-Back to Kildalton today with a $1.30 25 mL neat pour of Ardbeg 10 in a Glencairn. I don't know why, but this seems more punchy than I remember! Lots of peat smoke up front with a sort of citrusy sweetness underneath. It's that combination of smoke and citrus that screams Ardbeg to me and sets it apart from its Kildalton siblings. I really like this flavor profile. I'd like to try an older expression some day when the pocketbooks are a bit deeper. >$500 for a twenty something Ardbeg is a bit too much for now. [Compass Box No Name](http://www.compassboxwhisky.com/whiskies/index.php?id=22) is a blend containing old Ardbeg and goes for $140 around these parts. That's all for another day. For today, I'm just enjoying this standard.
+Back to Kildalton today with a $1.30 25 mL neat pour of Ardbeg 10 in a Glencairn. I don't know why, but this seems more punchy than I remember! Lots of peat smoke up front with a sort of citrusy sweetness underneath. A long, ashy finish. It's that combination of smoke, citrus and ash that screams Ardbeg to me and sets it apart from its Kildalton siblings. I really like this flavor profile. I'd like to try an older expression some day when the pocketbooks are a bit deeper. >$500 for a twenty something Ardbeg is a bit too much for now. [Compass Box No Name](http://www.compassboxwhisky.com/whiskies/index.php?id=22) is a blend containing old Ardbeg and goes for $140 around these parts. That's on my list to try some other day.
 
-Whisky Bob signing off.
+### Mrs. Whisky's Take
+
+As a non-whisky drinker, I'm really curious how Mrs. Whisky will take to these smoke monsters. Her notes on Ardbeg 10:
+
+> It tastes dirty. It tastes like someone tried to clean a chemical spill but they weren't successful. Chemical. Alcohol. Also dirt.
+>
+> **_Grade:_** **D**. It's bad. I don't like it. I just imagine there's something worse out there.
+
+Mr. and Mrs. Whisky Bob signing off.
