--- a/_posts/2018-03-05-kildalton-4.md
+++ b/_posts/2018-03-05-kildalton-4.md
@@ -6,7 +6,11 @@ category: blog
 tags: [Scotch, Islay, Ardbeg 10]
 ---
 
+### Ardbeg 10
+
 Back to Kildalton today with a $1.30 25 mL neat pour of Ardbeg 10 in a Glencairn. I don't know why, but this seems more punchy than I remember! Lots of peat smoke up front with a sort of citrusy sweetness underneath. A long, ashy finish. It's that combination of smoke, citrus and ash that screams Ardbeg to me and sets it apart from its Kildalton siblings. I really like this flavor profile. I'd like to try an older expression some day when the pocketbooks are a bit deeper. >$500 for a twenty something Ardbeg is a bit too much for now. [Compass Box No Name](http://www.compassboxwhisky.com/whiskies/index.php?id=22) is a blend containing old Ardbeg and goes for $140 around these parts. That's on my list to try some other day.
+
+<!--more-->
 
 ### Mrs. Whisky's Take
 
