--- a/_posts/2018-03-06-kildalton-5.md
+++ b/_posts/2018-03-06-kildalton-5.md
@@ -4,9 +4,14 @@ title: Kickin' in Kildalton - Part 5
 date: 2018-03-05
 category: blog
 tags: [Scotch, Islay, Laphroaig 10]
+excerpt_separator: <!--more-->
 ---
 
+### Laphroaig 10
+
 I poured a healthy $1.33 25mL neat pour of Laphroaig 10 in a Glencairn. I appreciate this stuff more and more. Peat smoke is the main note but there's a beautiful seaweed, brine-like note that is the characteristic Laphroaig note. It's less intense than the Ardbeg but more than the Lagavulin. There's a bit of saltiness that comes along. I could only taste the smoke when I first tried this years ago. I wonder if it's spending more time with this particular expression or drinking more whisky that's opened up my appreciation.
+
+<!--more-->
 
 ### Mrs. Whisky's Take
 
