--- a/_posts/2018-03-07-kildalton-6.md
+++ b/_posts/2018-03-07-kildalton-6.md
@@ -4,9 +4,14 @@ title: Kickin' in Kildalton - Part 6
 date: 2018-03-07
 category: blog
 tags: [Scotch, Islay, Lagavulin 16]
+excerpt_separator: <!--more-->
 ---
 
+### Lagavulin 16
+
 Completing my daily sampling of the Kildaltons with my first love, Lagavulin 16. I can easily say my appreciation for the others has grown and my appreciation for this has diminished somewhat over these last months of intense whiskification. I think it's that I really appreciate the boldness of the Ardbeg and I'm getting a better appreciation for the subtleties of the Laphroaig. Now, I still think Lagavulin is the tops. But man, it really bothers me that it sells for over $100 in some areas compared to $40 for the Laphroaig.
+
+<!--more-->
 
 Ignoring price, how's the whisky? I'm getting more of a wine-like sweetness on the nose similar to Bunnahabhain 12 today. Medium mouth feel. Nice amount of smokiness and "band-aids" on the finish. The smokiness is lighter than the other two. The finish pushes it over the top for me. Love chewing on some band-aids! It seems the best integrated and there are so many tasty notes working together. Still my favorite.
 
