--- a/_posts/2018-03-12-canada.md
+++ b/_posts/2018-03-12-canada.md
@@ -20,6 +20,7 @@ At some point I decided to pick up any sampler I could find for a reasonable pri
 #### Facts:
 
 * 40% ABV
+* Blended Canadian whisky
 * No age statement
 * Paid $4.39/50mL
 * $1.32/15mL pour
@@ -39,6 +40,7 @@ Now this brings me back to college. The purple bagged Crown Royal was my fancy d
 #### Facts:
 
 * 40% ABV
+* Blended Canadian whisky
 * No age statement
 * Paid $5.99/50mL
 * $1.80/15mL pour
