--- a/_posts/2018-02-28-grab-bag-4.md
+++ b/_posts/2018-02-28-grab-bag-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Grab Bag - Suntory Toki
+title: Grab Bag 4 - Suntory Toki
 date: 2018-02-28
 category: blog
 tags: [Japanese, Suntory Toki]
