review and gif test

--- a/_posts/2018-03-11-kildalton-7.md
+++ b/_posts/2018-03-11-kildalton-7.md
@@ -6,6 +6,8 @@ category: blog
 tags: [Scotch, Islay, Ardbeg 10, Lagavulin 16, Laphroaig 10]
 ---
 
+![Kildalton Morph](https://i.imgur.com/jGRmqAm.gifv)
+
 Time to wrap up this tour of Kildalton with a summary of the standard expressions.
 
 I was planning to head back to Speyside tomorrow but screw it, we're going for something completely different.
