--- a/_posts/2018-03-11-kildalton-7.md
+++ b/_posts/2018-03-11-kildalton-7.md
@@ -6,14 +6,7 @@ category: blog
 tags: [Scotch, Islay, Ardbeg 10, Lagavulin 16, Laphroaig 10]
 ---
 
-
-![Kildalton Morph](https://i.imgur.com/jGRmqAm.gifv)
-
-https://imgur.com/jGRmqAm
-
-<iframe class="imgur-embed" width="100%" height="1016" frameborder="0" src="https://i.imgur.com/jGRmqAm.gifv#embed"></iframe>
-
-[Imgur](https://i.imgur.com/jGRmqAm.gifv)
+<iframe class="imgur-embed" width="100%" height="100%" frameborder="0" src="https://i.imgur.com/jGRmqAm.gifv#embed"></iframe>
 
 Time to wrap up this tour of Kildalton with a summary of the standard expressions.
 
