--- a/_posts/2018-03-11-kildalton-7.md
+++ b/_posts/2018-03-11-kildalton-7.md
@@ -6,7 +6,9 @@ category: blog
 tags: [Scotch, Islay, Ardbeg 10, Lagavulin 16, Laphroaig 10]
 ---
 
-<iframe class="imgur-embed" width="100%" height="100%" frameborder="0" src="https://i.imgur.com/jGRmqAm.gifv#embed"></iframe>
+<iframe class="imgur-embed" width="100%" height="1016" frameborder="0" src="https://i.imgur.com/jGRmqAm.gifv#embed"></iframe>
+
+<iframe class="imgur-embed" frameborder="0" src="https://i.imgur.com/jGRmqAm.gifv#embed"></iframe>
 
 Time to wrap up this tour of Kildalton with a summary of the standard expressions.
 
