--- a/_posts/2018-03-11-kildalton-7.md
+++ b/_posts/2018-03-11-kildalton-7.md
@@ -6,9 +6,7 @@ category: blog
 tags: [Scotch, Islay, Ardbeg 10, Lagavulin 16, Laphroaig 10]
 ---
 
-<iframe class="imgur-embed" width="100%" height="508" frameborder="0" src="https://i.imgur.com/wxQDGDj.gifv#embed"></iframe>
-
-<a href="https://imgur.com/jGRmqAm"><img src="https://i.imgur.com/jGRmqAml.gif" title="source: imgur.com" /></a>
+![Kildalton Trio Gif](https://i.imgur.com/wxQDGDj.gif)
 
 Time to wrap up this tour of Kildalton with a summary of the standard expressions.
 
