--- a/_posts/2018-03-12-canada-1.md
+++ b/_posts/2018-03-12-canada-1.md
@@ -59,4 +59,4 @@ This might be a bit higher tier of whisky with the toffee-like finish but I thin
 
 Neither one of these did a whole lot for me but they're easy drinking and at least have a little flavor. These could both work as mixers or even sippers. I prefer the profile of the cheaper "Fine De Luxe" but it really leaves me craving a bourbon or rye with more intense flavors.
 
-Whiskey Bob signing off.
+Whisky Bob signing off.
