--- a/_posts/2018-03-13-canada-2.md
+++ b/_posts/2018-03-13-canada-2.md
@@ -7,13 +7,9 @@ tags: [Canadian, Canadian Club, Pendleton]
 excerpt_separator: <!--more-->
 ---
 
-![Canadian Samplers]({{site.baseurl}}/images/2018-03-12-canada.jpg)
-
-I was planning to come back to Speyside today but got bored thinking about Glenlivet. So I'm going to drink Canadian whisky instead!
+I'm going to speed thing up a bit and do the rest of these samplers 25 mL each day. Up today is what I believe to be bottom shelf stuff - Canadian Club and Pendleton standard expressions. I'm diving in head first and pouring these neat in Glencairns. Because I'm obviously a gentleman. As usual, just tasting today. I'll do a bit more research when I revisit later.
 
 <!--more-->
-
-At some point I decided to pick up any sampler I could find for a reasonable price. There's some standard Canadian expressions in here and some stuff that looks like rubbish. I look forward to trying them all! Up today are neat ~15 mL pours of Crown Royal standard and Reserve. As normal for my first time trying new expressions, I'm just sniffing and drinking without any further research today.
 
 ### Canadian Club
 
@@ -22,17 +18,18 @@ At some point I decided to pick up any sampler I could find for a reasonable pri
 * 40% ABV
 * Blended Canadian whisky
 * No age statement
-* Paid $4.39/50mL
-* $1.32/15mL pour
+* Paid $2.99/50mL
+* $1.50/25mL pour
 
 #### Notes:
 
-* Nose: Big alcohol hit.
+* Nose: Big alcohol hit. Some corn sweetness and some sort of spice - rye? wood? Not sure.
 * Taste: A lot of sweetness in the mouth. Alcohol.
-* Finish: Lingering bitter sweetness lasts awhile.
+* Finish: Alcohol burn, sweetness. Pleasant when the burn stops. Something like black licorice / anise reveals itself in the finish.
 
 #### Conclusion:
 
+Not great at all. I like the anise note but otherwise the alcohol burn detracts and the rest doesn't do much for me. I like it better than the Pendleton. It's more interesting than the Crowns of yesterday but also a bit more burn. It lacks that "cheap whisky" note I get from the Crowns.
 
 ### Pendleton
 
@@ -41,21 +38,21 @@ At some point I decided to pick up any sampler I could find for a reasonable pri
 * 40% ABV
 * Blended Canadian whisky
 * No age statement
-* Paid $5.99/50mL
-* $1.80/15mL pour
+* Paid $4.49/50mL
+* $2.25/25mL pour
 
 #### Notes:
 
-* Nose: Even more alcohol!
-* Taste: Similar body and flavor profile as the standard.
-* Finish: A bit of toffee or caramel up front with more spice and that "cheap whisky" flavor on the back end. There's a lingering bitterness that's not altogether pleasant. I get more of that pine/hops flavor after a couple sips.
+* Nose: Nail polish remover with a touch of sugar.
+* Taste: Alcohol burn, numbing, sweet notes.
+* Finish: Warming, alcohol, corn sweetness, bitterness. Bitter sweetness lasts the longest. Unpleasant at first but becomes neutral the more I drink... neutral at best...
 
 #### Conclusion:
 
-This might be a bit higher tier of whisky with the toffee-like finish but I think I prefer the standard. I'm not a hoppy guy and the nose puts me off a bit.
+Alright, this stuff is dreadful. Tons of alcohol burn with flavors that are mostly unpleasant. We're in **D** range, folks!
 
 ### Final Thoughts
 
-Neither one of these did a whole lot for me but they're easy drinking and at least have a little flavor. These could both work as mixers or even sippers. I prefer the profile of the cheaper "Fine De Luxe" but it really leaves me craving a bourbon or rye with more intense flavors.
+These certainly aren't winners but I'm glad to start filling out the bottom range of my grading scale. There's interesting stuff happening in the Canadian Club and I'm curious about their higher tier stuff. The Pendleton is the worst thing I've yet tried.
 
 Whiskey Bob signing off.
