--- a/_posts/2018-03-18-speyside-05.md
+++ b/_posts/2018-03-18-speyside-05.md
@@ -17,10 +17,9 @@ I've been putting this off long enough. Time to finish these Speyside samplers a
 
 * 40% ABV
 * Single Malt Speyside Scotch
-* 12 years old
-* Matured in "traditional and American oak" casks
-* Paid $5.29/50mL
-* $1.59/15mL pour
+* "Carefully matured in the finest American oak and European oak sherry casks for at least 12 years, it is mellowed in oak marrying tuns to create its sweet and subtle oak flavours."
+* Paid $5.99/50mL
+* $2.00/15mL pour
 
 #### Notes
 
