--- a/_posts/2018-04-21-grabbag-1.md
+++ b/_posts/2018-04-21-grabbag-1.md
@@ -21,6 +21,7 @@ The run down:
 * Non chill-filtered
 * Paid $65 for a 750 mL bottle
 * $2.17/25mL pour
+* Corporate overlord: Beam Suntory
 * [Official website](https://www.laphroaig.com/product/lore/)
 
 Tasting notes:
