--- a/_posts/2018-04-27-mystery-04.md
+++ b/_posts/2018-04-27-mystery-04.md
@@ -1,25 +1,45 @@
 ---
 layout: post
-title: Mystery Hooch - Part 3
-date: 2018-04-25
+title: Mystery Hooch - Part 4
+date: 2018-04-27
 category: blog
 tags: [Mystery]
 excerpt_separator: <!--more-->
 ---
 
-The third and final mystery whisky from Whisky Matty is up today.
+So... that Manhattan was WAY stronger than I expected last night! That was the first time I've gotten tipsy this entire adventure. I've been thinking in mL and didn't do the conversion... turns out 2 oz of 60% ABV Stagg Jr. is about 60 mL. That's a lot! Sorry, math, I will use you next time.
+
+Back to mystery fun and it's another heavy drinking night. 3x 25 mL samplers together today.
 
 <!--more-->
 
-### Mystery Whisky #3
+### Nose
 
-Tasting notes:
-* **Nose**: Alcohol, sherry-like sweetness, wood. Scotch?
-* **Palate**: Light-medium bodied. Gentle sweetness that grows and then some tobacco like notes.
-* **Finish**: Quick finish and then some nice sweet woody notes linger awhile.
+* **#1**: Cherry!
+* **#2**: Vanilla and wood!
+* **#3**: Scotch-like sherry sweetness!
 
-This has a Speyside like profile. There seems to a be a bit more oomph than the other two so I'll guess mid to high 40s ABV. This isn't terribly complex and the flavors that are here aren't doing a whole lot for me. It reminds me of Bunnahabhain 12 without the nuttiness or Highland Park 12 without the peat. I'd prefer a bit more kick ala A'bunadh or a bit more smoothness ala Macallan for this flavor profile. I'll give it a **C++/B-** first impression. Clearly my least favorite of the three samples... which means it's probably something super fancy :P
+I find that my nose quickly gets saturated and I can't tell the difference after sniffing a few whiskies. My sense of smell comes back after drinking a bit.
 
-Back tomorrow trying all three side by side! Really curious to see what flavors are brought out when drinking these all together.
+### Palate
+
+* **#1**: Sweet right off the bat. Cherries in my mouth.
+* **#2**: Thicker than the others. Woody notes
+* **#3**: I get more complexity out of this one now. Mix of sweet and wood.
+
+### Finish
+
+* **#1**: Mediumish finish. I get more woody notes now than before.
+* **#2**: Sweet but kind of lost compared to the other two.
+* **#3**: Woody and sweet finish up front. Woody and tanniny after a bit.
+
+
+### Conclusion
+
+* **#1**: Still my favorite with that nice cherry flavor. Yum!
+* **#2**: Interesting to see this one kind of fade when placed next to the bolder flavors. It came out as good but devolved into just OK when I hit whisky overload.
+* **#3**: I like this one better than the first time I tried it. I'm getting more complexity and starting to dig the woody notes.
+
+I shouldn't be surprised by now, but 75 mL of whisky is too much for me! I ended up having a bit of each left over and I'm going to see how they hold up staying out overnight.
 
 Whisky Bob signing off.
