--- a/_posts/2018-04-28-mystery-05.md
+++ b/_posts/2018-04-28-mystery-05.md
@@ -17,8 +17,6 @@ First, let's see how the 5-10 mL of each one held up uncovered overnight.
 * **#2**: Smells like Coca Cola now! Some wood or maybe rye spiciness comes to the fore. Some nice lingering sweetness and woodiness on the finish. It's diminished a bit from yesterday but I do get some different interesting notes now. Thank you for holding up, whisky.
 * **#3**: Almost nothing on the nose. Not much left on the taste, either. Apologies for the disrespect, whisky.
 
-### Guessing ABV and style
-
-I asked whisky Matty to
+That's about all the time I have for today. Back tomorrow with a blind sampling and the grand reveal!
 
 Whisky Bob signing off.
