--- a/_posts/2018-04-29-mystery-06.md
+++ b/_posts/2018-04-29-mystery-06.md
@@ -11,7 +11,7 @@ So I have about 50 mL of each mystery whisky left. I'm going to go through a ser
 
 <!--more-->
 
-### Blind test intro
+### Blind Test Intro
 
 Mrs. Whisky is graciously pouring blind serves for me. I'm looking for the following notes in my tasting:
 
@@ -25,7 +25,44 @@ The cherry note made #1 easy to distinguish. One of them was a bit sweeter and t
 
 ### Test #2: Blind Taste Test
 
+Again, #1 was easy to detect because of its distinct cherry note. #2 and #3 were more similar but #2 had a sweet vanilla note. Again, 3/3!
 
+### Test #3: ABV Test
 
+Whisky Matt kindly revealed the ABV, origin and names of each of the three samples. I asked Mrs. Whisky to reveal the ABVs to see if I could guess them. She gave me this list:
 
-Whisky Bob signing off.
+* 40%
+* 40%
+* 40%
+
+Hmmm... well I guess that's another 3/3 by default! I'm not surprised by these results - my guesses were all in the 40s and this makes a lot of sense. I maybe would have put #2 at a higher ABV% just because of how well it held up open overnight.
+
+### Test #4 Origin Test
+
+My blind guesses were Bourbon, Bourbon and Speyside and I'm hoping I can guess from those initial notes. And the origins are...
+
+* France
+* France
+* France
+
+Wait... what? I guess I get a 3/3 by default again but I don't think Whisky Matty has given me three French whiskies. We're certainly not in Kentucky anymore!
+
+### The Grand Reveal
+
+Whisky Matty, you dirty dog! You've gifted me three very fine cognacs!
+
+* **#1**: Hennesy XO
+* **#2**: Courvoisier XO
+* **#3**: Remy Martin XO
+
+Wow, what a wonderful surprise! I'm extremely humbled by this generous curve ball. I've been meaning to do a series exploring other spirits and this is a great way to kick it off. Knowing the origins, I feel like I need to appreciate them a bit more and won't be racing to finish these bottles. I'll be savoring them as cognacs and get some of their younger siblings for comparison.
+
+After the reveal, I definitely taste more wine notes from the grapes. It's so interesting how your perspective going into a challenge like this can shape your whole experience. I'm already approaching these with an air of respect... not sure if that's a good or bad thing. This is all to drink, after all, and we shouldn't be too precious about these things.
+
+Thanks for this fun experiment. Looking forward to tasting again knowing the origins. Cognac Matty placed this fine quote along with the drinks:
+
+"It is well to remember that there are five reasons for drinking: the arrival of a friend, one's present or future thirst, the excellence of the cognac, or any other reason."
+
+Here's to many reasons.
+
+Cognac Bob signing off.
