--- a/_posts/2018-05-06-islands-01.md
+++ b/_posts/2018-05-06-islands-01.md
@@ -34,9 +34,14 @@ The run down:
 
 * **Nose:** Light peat smoke, sea air. Kind of like a light Laphroaig.
 * **Taste:** Initially sweet, then a peppery sensation and some peat smoke.
-* **Finish:** Medium length. Peppery sea air. Again like a light Laphroaig with a dash of pepper.
+* **Finish:** Medium length. Peppery sea air. Again like a light Laphroaig with a dash of pepper. Maybe a bit of citrus.
 
-This seems to be a tad less smoky than the Kildalton Islays but its full of flavor. I like the peppery note a lot and it's a nice mix with the Laphroaig-like sea-air profile. I can see why this is often put up as a recommendation to those new to peated whiskies. The pepper is the standout note here. Otherwise, it's very similar to the peated Islay whiskies. Not a whole lot of complexity going on but that peppery note is so good. **B/B+** first impression.
+This seems to be a tad less smoky than the Kildalton Islays but its full of flavor. I like the peppery note a lot and it's a nice mix with the Laphroaig-like sea-air profile. I can see why this is often put up as a recommendation to those new to peated whiskies. The pepper is the standout note here. Otherwise, it's very similar to the peated Islay whiskies. Not a whole lot of complexity going on but that peppery note is so good. I also like the slightly higher than standard 45.8% ABV. **B/B+** first impression. Wish I would have sprung for an additional sample of the 18 year old.
 
+### Highland Park 12
+
+Mmmm... Highland Park 12, the whisky that started this journey. Tasting next to the Talisker really brings out the sherry sweetness and highlights the peat. This is a good 1-2 punch.
+
+Good stuff here. Back tomorrow with a couple of hte samples.
 
 Whisky Bob signing off.
