--- a/_posts/2018-05-06-islands-01.md
+++ b/_posts/2018-05-06-islands-01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Ardbeg. Arrr.
-date: 2018-05-01
+title: The Isles of Scotland - Part 1
+date: 2018-05-06
 category: blog
 tags: [Scotch, Islands, Talisker 10, Highland Park 12]
 excerpt_separator: <!--more-->
@@ -42,6 +42,6 @@ This seems to be a tad less smoky than the Kildalton Islays but its full of flav
 
 Mmmm... Highland Park 12, the whisky that started this journey. Tasting next to the Talisker really brings out the sherry sweetness and highlights the peat. This is a good 1-2 punch.
 
-Good stuff here. Back tomorrow with a couple of hte samples.
+Good stuff here. Back tomorrow or the next day to crack open the first sample.
 
 Whisky Bob signing off.
